# bvh-raytracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  readme.md  run.bat  sim_notebook.ipynb  simulator.py
docs/: benchmark.csv  plot.py  raytracer_bvh.tex  report.tex  slides.tex
res/cornell/: template.tex
res/data/: cam_anim_2.txt  skin.weights
res/mall/: mall.mtl
res/robloxian/: robloxian.mtl
src/: main.cpp  sr_config.hpp  sr_memstat.hpp
src/engine/: sr_engine.hpp  sr_engine_A.cpp  sr_engine_B.cpp  sr_engine_B.cpp_old  sr_engine_B.cpp_old2
src/game/: sr_ball.cpp  sr_ball.hpp  sr_benchmark.cpp  sr_benchmark.hpp  sr_game.cpp  sr_game.hpp  sr_game_state.hpp  sr_hud.cpp  sr_hud.hpp  sr_raytrace.cpp  sr_raytrace.hpp  sr_scene.cpp  sr_scene.hpp
src/io/: stb_image.cpp
src/math/: sr_constants.hpp  sr_helpers.hpp  sr_lingalg.hpp  sr_math.hpp  sr_vec.hpp
src/r_refactor/: music.cpp  sr_lec.cpp
src/renderer/: bvh.cpp  bvh.hpp  embree_bvh.hpp  font8x8_basic.hpp  sr_camera.cpp  sr_camera.hpp  sr_framebuffer.hpp  sr_geometry.cpp  sr_geometry.hpp  sr_ocl.cpp  sr_ocl.hpp  sr_primitives.hpp  sr_render_config.hpp  sr_renderer.cpp  sr_renderer.hpp  sr_skin.hpp  sr_text.cpp  sr_text.h  sr_text.hpp  sr_texture.cpp  sr_texture.hpp
src/sound/: sr_sound.cpp  sr_sound.hpp
tests/: sim_2.ipynb  sim_notebook.ipynb  testy.py  testy2.py
